# SCA_firmware_FALCON

./: CMakeLists.txt
SS1x_firmware/: Falcon-CW308_STM32F3.eep  Falcon-CW308_STM32F3.elf  Falcon-CW308_STM32F3.hex  Falcon-CW308_STM32F3.lss  Falcon-CW308_STM32F3.map  Falcon-CW308_STM32F3.sym  Falcon-CW308_STM32F3_exp+s.hex  Falcon-CW308_STM32F3_exp+ss.hex  Falcon-CW308_STM32F3expexp1.hex  api.c  api.h  del.c  fft.c  fft.h  fpr.c  fpr.h  katrng.c  main.c  makefile  nist.c  nist.h  shake.c  sign.c
SS1x_firmware/.dep/: api.o.d  codec.o.d  common.o.d  fft.o.d  fpr.o.d  katrng.o.d  keygen.o.d  main.o.d  nist.o.d  rng.o.d  shake.o.d  sign.o.d  vrfy.o.d
SS1x_firmware/objdir/: api.lst  codec.lst  common.lst  fft.lst  fpr.lst  katrng.lst  keygen.lst  main.lst  nist.lst  rng.lst  shake.lst  sign.lst  simpleserial.lst  stm32f3_hal.lst  stm32f3_hal_lowlevel.lst  stm32f3_sysmem.lst  vrfy.lst
base/: Makefile.inc
