cmake_minimum_required(VERSION 3.20)
project(ChipFalcon C)

set(CMAKE_C_STANDARD 11)

include_directories(base/hal)
include_directories(base/hal/saml11)
include_directories(base/hal/saml11/CMSIS)
include_directories(base/hal/saml11/component)
include_directories(base/hal/saml11/instance)
include_directories(base/hal/saml11/pio)
include_directories(base/hal/stm32f0)
include_directories(base/hal/stm32f0/CMSIS)
include_directories(base/hal/stm32f0/CMSIS/core)
include_directories(base/hal/stm32f0/CMSIS/device)
include_directories(base/hal/stm32f0/Legacy)
include_directories(base/hal/stm32f3)
include_directories(base/hal/stm32f3/CMSIS)
include_directories(base/hal/stm32f3/CMSIS/core)
include_directories(base/hal/stm32f3/CMSIS/device)
include_directories(base/hal/stm32f3/Legacy)
include_directories(base/hal/xmega)
include_directories(base/simpleserial)
include_directories(SS1x_firmware)

add_executable(ChipFalcon
        base/hal/saml11/CMSIS/arm_common_tables.h
        base/hal/saml11/CMSIS/arm_const_structs.h
        base/hal/saml11/CMSIS/arm_math.h
        base/hal/saml11/CMSIS/cmsis_armcc.h
        base/hal/saml11/CMSIS/cmsis_armclang.h
        base/hal/saml11/CMSIS/cmsis_compiler.h
        base/hal/saml11/CMSIS/cmsis_gcc.h
        base/hal/saml11/CMSIS/core_armv8mbl.h
        base/hal/saml11/CMSIS/core_armv8mml.h
        base/hal/saml11/CMSIS/core_cm0.h
        base/hal/saml11/CMSIS/core_cm0plus.h
        base/hal/saml11/CMSIS/core_cm23.h
        base/hal/saml11/CMSIS/core_cm3.h
        base/hal/saml11/CMSIS/core_cm33.h
        base/hal/saml11/CMSIS/core_cm4.h
        base/hal/saml11/CMSIS/core_cm7.h
        base/hal/saml11/CMSIS/core_sc000.h
        base/hal/saml11/CMSIS/core_sc300.h
        base/hal/saml11/CMSIS/tz_context.h
        base/hal/saml11/component/ac.h
        base/hal/saml11/component/adc.h
        base/hal/saml11/component/ccl.h
        base/hal/saml11/component/dac.h
        base/hal/saml11/component/dmac.h
        base/hal/saml11/component/dsu.h
        base/hal/saml11/component/eic.h
        base/hal/saml11/component/evsys.h
        base/hal/saml11/component/freqm.h
        base/hal/saml11/component/gclk.h
        base/hal/saml11/component/idau.h
        base/hal/saml11/component/mclk.h
        base/hal/saml11/component/nvmctrl.h
        base/hal/saml11/component/opamp.h
        base/hal/saml11/component/osc32kctrl.h
        base/hal/saml11/component/oscctrl.h
        base/hal/saml11/component/pac.h
        base/hal/saml11/component/pm.h
        base/hal/saml11/component/port.h
        base/hal/saml11/component/ptc.h
        base/hal/saml11/component/rstc.h
        base/hal/saml11/component/rtc.h
        base/hal/saml11/component/sercom.h
        base/hal/saml11/component/supc.h
        base/hal/saml11/component/tc.h
        base/hal/saml11/component/tram.h
        base/hal/saml11/component/trng.h
        base/hal/saml11/component/wdt.h
        base/hal/saml11/instance/ac.h
        base/hal/saml11/instance/adc.h
        base/hal/saml11/instance/ccl.h
        base/hal/saml11/instance/dac.h
        base/hal/saml11/instance/dmac.h
        base/hal/saml11/instance/dsu.h
        base/hal/saml11/instance/eic.h
        base/hal/saml11/instance/evsys.h
        base/hal/saml11/instance/freqm.h
        base/hal/saml11/instance/gclk.h
        base/hal/saml11/instance/idau.h
        base/hal/saml11/instance/mclk.h
        base/hal/saml11/instance/nvmctrl.h
        base/hal/saml11/instance/opamp.h
        base/hal/saml11/instance/osc32kctrl.h
        base/hal/saml11/instance/oscctrl.h
        base/hal/saml11/instance/pac.h
        base/hal/saml11/instance/pm.h
        base/hal/saml11/instance/port.h
        base/hal/saml11/instance/ptc.h
        base/hal/saml11/instance/rstc.h
        base/hal/saml11/instance/rtc.h
        base/hal/saml11/instance/sercom0.h
        base/hal/saml11/instance/sercom1.h
        base/hal/saml11/instance/sercom2.h
        base/hal/saml11/instance/supc.h
        base/hal/saml11/instance/tc0.h
        base/hal/saml11/instance/tc1.h
        base/hal/saml11/instance/tc2.h
        base/hal/saml11/instance/tram.h
        base/hal/saml11/instance/trng.h
        base/hal/saml11/instance/wdt.h
        base/hal/saml11/pio/saml11d14a.h
        base/hal/saml11/pio/saml11d15a.h
        base/hal/saml11/pio/saml11d16a.h
        base/hal/saml11/pio/saml11e14a.h
        base/hal/saml11/pio/saml11e15a.h
        base/hal/saml11/pio/saml11e16a.h
        base/hal/saml11/component-version.h
        base/hal/saml11/sam.h
        base/hal/saml11/saml11_hal.c
        base/hal/saml11/saml11_hal.h
        base/hal/saml11/saml11e16a.h
        base/hal/saml11/startup_saml11e16a.c
        base/hal/saml11/system_saml11.h
        base/hal/saml11/system_saml11e16a.c
        base/hal/stm32f0/CMSIS/core/arm_common_tables.h
        base/hal/stm32f0/CMSIS/core/arm_const_structs.h
        base/hal/stm32f0/CMSIS/core/arm_math.h
        base/hal/stm32f0/CMSIS/core/cmsis_armcc.h
        base/hal/stm32f0/CMSIS/core/cmsis_armcc_V6.h
        base/hal/stm32f0/CMSIS/core/cmsis_gcc.h
        base/hal/stm32f0/CMSIS/core/core_cm0.h
        base/hal/stm32f0/CMSIS/core/core_cm0plus.h
        base/hal/stm32f0/CMSIS/core/core_cm3.h
        base/hal/stm32f0/CMSIS/core/core_cm4.h
        base/hal/stm32f0/CMSIS/core/core_cm7.h
        base/hal/stm32f0/CMSIS/core/core_cmFunc.h
        base/hal/stm32f0/CMSIS/core/core_cmInstr.h
        base/hal/stm32f0/CMSIS/core/core_cmSimd.h
        base/hal/stm32f0/CMSIS/core/core_sc000.h
        base/hal/stm32f0/CMSIS/core/core_sc300.h
        base/hal/stm32f0/CMSIS/device/stm32f030x6.h
        base/hal/stm32f0/CMSIS/device/stm32f030x8.h
        base/hal/stm32f0/CMSIS/device/stm32f030xc.h
        base/hal/stm32f0/CMSIS/device/stm32f031x6.h
        base/hal/stm32f0/CMSIS/device/stm32f038xx.h
        base/hal/stm32f0/CMSIS/device/stm32f042x6.h
        base/hal/stm32f0/CMSIS/device/stm32f048xx.h
        base/hal/stm32f0/CMSIS/device/stm32f051x8.h
        base/hal/stm32f0/CMSIS/device/stm32f058xx.h
        base/hal/stm32f0/CMSIS/device/stm32f070x6.h
        base/hal/stm32f0/CMSIS/device/stm32f070xb.h
        base/hal/stm32f0/CMSIS/device/stm32f071xb.h
        base/hal/stm32f0/CMSIS/device/stm32f072xb.h
        base/hal/stm32f0/CMSIS/device/stm32f078xx.h
        base/hal/stm32f0/CMSIS/device/stm32f091xc.h
        base/hal/stm32f0/CMSIS/device/stm32f098xx.h
        base/hal/stm32f0/CMSIS/device/stm32f0xx.h
        base/hal/stm32f0/CMSIS/device/system_stm32f0xx.h
        base/hal/stm32f0/Legacy/stm32_hal_legacy.h
        base/hal/stm32f0/stm32f0_hal.c
        base/hal/stm32f0/stm32f0_hal.h
        base/hal/stm32f0/stm32f0_hal_lowlevel.c
        base/hal/stm32f0/stm32f0_hal_lowlevel.h
        base/hal/stm32f0/stm32f0xx_hal_def.h
        base/hal/stm32f0/stm32f0xx_hal_dma.h
        base/hal/stm32f0/stm32f0xx_hal_dma_ex.h
        base/hal/stm32f0/stm32f0xx_hal_flash.h
        base/hal/stm32f0/stm32f0xx_hal_flash_ex.h
        base/hal/stm32f0/stm32f0xx_hal_gpio.h
        base/hal/stm32f0/stm32f0xx_hal_gpio_ex.h
        base/hal/stm32f0/stm32f0xx_hal_rcc.h
        base/hal/stm32f0/stm32f0xx_hal_rcc_ex.h
        base/hal/stm32f0/stm32f0xx_hal_uart.h
        base/hal/stm32f0/stm32f0xx_hal_uart_ex.h
        base/hal/stm32f3/CMSIS/core/arm_common_tables.h
        base/hal/stm32f3/CMSIS/core/arm_const_structs.h
        base/hal/stm32f3/CMSIS/core/arm_math.h
        base/hal/stm32f3/CMSIS/core/cmsis_armcc.h
        base/hal/stm32f3/CMSIS/core/cmsis_armcc_V6.h
        base/hal/stm32f3/CMSIS/core/cmsis_gcc.h
        base/hal/stm32f3/CMSIS/core/core_cm0.h
        base/hal/stm32f3/CMSIS/core/core_cm0plus.h
        base/hal/stm32f3/CMSIS/core/core_cm3.h
        base/hal/stm32f3/CMSIS/core/core_cm4.h
        base/hal/stm32f3/CMSIS/core/core_cm7.h
        base/hal/stm32f3/CMSIS/core/core_cmFunc.h
        base/hal/stm32f3/CMSIS/core/core_cmInstr.h
        base/hal/stm32f3/CMSIS/core/core_cmSimd.h
        base/hal/stm32f3/CMSIS/core/core_sc000.h
        base/hal/stm32f3/CMSIS/core/core_sc300.h
        base/hal/stm32f3/CMSIS/device/stm32f301x8.h
        base/hal/stm32f3/CMSIS/device/stm32f302x8.h
        base/hal/stm32f3/CMSIS/device/stm32f302xc.h
        base/hal/stm32f3/CMSIS/device/stm32f302xe.h
        base/hal/stm32f3/CMSIS/device/stm32f303x8.h
        base/hal/stm32f3/CMSIS/device/stm32f303xc.h
        base/hal/stm32f3/CMSIS/device/stm32f303xe.h
        base/hal/stm32f3/CMSIS/device/stm32f318xx.h
        base/hal/stm32f3/CMSIS/device/stm32f328xx.h
        base/hal/stm32f3/CMSIS/device/stm32f334x8.h
        base/hal/stm32f3/CMSIS/device/stm32f358xx.h
        base/hal/stm32f3/CMSIS/device/stm32f373xc.h
        base/hal/stm32f3/CMSIS/device/stm32f378xx.h
        base/hal/stm32f3/CMSIS/device/stm32f398xx.h
        base/hal/stm32f3/CMSIS/device/stm32f3xx.h
        base/hal/stm32f3/CMSIS/device/system_stm32f3xx.h
        base/hal/stm32f3/Legacy/stm32_hal_legacy.h
        base/hal/stm32f3/stm32f3_hal.c
        base/hal/stm32f3/stm32f3_hal.h
        base/hal/stm32f3/stm32f3_hal_lowlevel.c
        base/hal/stm32f3/stm32f3_hal_lowlevel.h
        base/hal/stm32f3/stm32f3_hal_seccan.c
        base/hal/stm32f3/stm32f3_hal_seccan.h
        base/hal/stm32f3/stm32f3_sysmem.c
        base/hal/stm32f3/stm32f3xx_hal_adc.h
        base/hal/stm32f3/stm32f3xx_hal_adc_ex.c
        base/hal/stm32f3/stm32f3xx_hal_adc_ex.h
        base/hal/stm32f3/stm32f3xx_hal_can.c
        base/hal/stm32f3/stm32f3xx_hal_can.h
        base/hal/stm32f3/stm32f3xx_hal_cortex.h
        base/hal/stm32f3/stm32f3xx_hal_def.h
        base/hal/stm32f3/stm32f3xx_hal_dma.h
        base/hal/stm32f3/stm32f3xx_hal_dma_ex.h
        base/hal/stm32f3/stm32f3xx_hal_flash.c
        base/hal/stm32f3/stm32f3xx_hal_flash.h
        base/hal/stm32f3/stm32f3xx_hal_flash_ex.c
        base/hal/stm32f3/stm32f3xx_hal_flash_ex.h
        base/hal/stm32f3/stm32f3xx_hal_gpio.h
        base/hal/stm32f3/stm32f3xx_hal_gpio_ex.h
        base/hal/stm32f3/stm32f3xx_hal_rcc.h
        base/hal/stm32f3/stm32f3xx_hal_rcc_ex.h
        base/hal/stm32f3/stm32f3xx_hal_tim.c
        base/hal/stm32f3/stm32f3xx_hal_tim.h
        base/hal/stm32f3/stm32f3xx_hal_tim_ex.h
        base/hal/stm32f3/stm32f3xx_hal_uart.h
        base/hal/stm32f3/stm32f3xx_hal_uart_ex.h
        base/hal/stm32f3/stm32f3xx_hal_usart.h
        base/hal/stm32f3/stm32f3xx_hal_usart_ex.h
        base/hal/xmega/avr_compiler.h
        base/hal/xmega/uart.c
        base/hal/xmega/uart.h
        base/hal/xmega/usart_driver.c
        base/hal/xmega/usart_driver.h
        base/hal/xmega/XMEGA_AES_driver.c
        base/hal/xmega/XMEGA_AES_driver.h
        base/hal/xmega/xmega_hal.c
        base/hal/xmega/xmega_hal.h
        base/hal/hal.h
        base/simpleserial/simpleserial.c
        base/simpleserial/simpleserial.h
        SS1x_firmware/api.c
        SS1x_firmware/api.h
        SS1x_firmware/codec.c
        SS1x_firmware/common.c
        SS1x_firmware/del.c
        SS1x_firmware/fft.c
        SS1x_firmware/fpr.c
        SS1x_firmware/fpr.h
        SS1x_firmware/inner.h
        SS1x_firmware/katrng.c
        SS1x_firmware/katrng.h
        SS1x_firmware/keygen.c
        SS1x_firmware/main.c
        SS1x_firmware/nist.c
        SS1x_firmware/rng.c
        SS1x_firmware/shake.c
        SS1x_firmware/sign.c
        SS1x_firmware/vrfy.c SS1x_firmware/fft.h SS1x_firmware/nist.h)
